# PumpkinDB

./: .gitignore  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  Dockerfile  LICENSE-HEADER  Makefile  README.md  RELEASE_NOTES.md  appveyor.yml
doc/: FEATURES.md  README.md  SUMMARY.md  WIREPROTOCOL.md  WIRE_PROTOCOL.md  book.json
doc/script/: -ROT.md  2DROP.md  2DUP.md  2NIP.md  2OVER.md  2ROT.md  2SWAP.md  2TUCK.md  3DROP.md  3DUP.md  AND.md  ASSOC.md  ASSOCP.md  ASSOCQ.md  COMMIT.md  CONCAT.md  CURSOR.md  DEF.md  DEPTH.md  DOWHILE.md  DROP.md  DUP.md  EQUALP.md  EQUALQ.md  EVAL.md  FEATUREP.md  FEATUREQ.md  FROM_BQ.md  FROM_FQ.md  FROM_R.md  GTP.md  GTQ.md  HLC.md  IF.md  IFELSE.md  JSONQ.md  LENGTH.md  LTP.md  LTQ.md  NIP.md  (+36 more)
doc/script/CURSOR/: CUR.md  CURP.md  CURQ.md  DOWHILE-PREFIXED.md  DOWHILE.md  FIRST.md  FIRSTP.md  FIRSTQ.md  KEY.md  LAST.md  LASTP.md  LASTQ.md  NEXT.md  NEXTP.md  NEXTQ.md  POSITIONEDQ.md  PREV.md  PREVP.md  PREVQ.md  SEEK.md  SEEKLAST.md  SEEKP.md  SEEKQ.md  VAL.md
doc/script/ERRORS/: DECODING.md  DatabaseError.md  EmptyStack.md  UNKNOWN_KEY.md  UNKNOWN_WORD.md
doc/script/EVAL/: SCOPED.md  VALIDP.md  VALIDQ.md
doc/script/F_SIZED/: ADD.md  README.md  SUB.md  TO_STRING.md
doc/script/HASH/: SHA1.md  SHA224.md  SHA256.md  SHA384.md  SHA512-224.md  SHA512-256.md  SHA512.md
doc/script/HLC/: GTP.md  LC.md  LTP.md  LTQ.md  OBSERVE.md  TICK.md
doc/script/INT/: ADD.md  EQUALQ.md  GTQ.md  INTQ.md  LTQ.md  README.md  SUB.md  TOUINT.md  TO_STRING.md
doc/script/INT_SIZED/: ADD.md  EQUALQ.md  GTQ.md  LTQ.md  README.md  SUB.md  TO_STRING.md
doc/script/JSON/: ARRAYQ.md  BOOLEANQ.md  EMPTY.md  GET.md  HASQ.md  NULLQ.md  NUMBERQ.md  OBJECTQ.md  SET.md  STRINGQ.md  STRING_TO.md  TO_STRING.md
doc/script/QCURSOR/: CUR.md  DOWHILE.md  FIRST.md  LAST.md  NEXT.md  PREV.md  SEEK.md  SEEKLAST.md
doc/script/STRING/: TO_F_SIZED.md  TO_INT.md  TO_INT_SIZED.md  TO_UINT.md  TO_UINT_SIZED.md
doc/script/UINT/: ADD.md  EQUALQ.md  GTQ.md  LTQ.md  SUB.md  TOINT.md  TO_STRING.md
doc/script/UINT_SIZED/: ADD.md  EQUALQ.md  GTQ.md  LTQ.md  SUB.md  TO_STRING.md
doc/script/UUID/: STRING_TO.md  TO_STRING.md  V4.md  V5.md
doc/script/_SYSTEM/: MAXKEYSIZE.md  VERSION.md
doc/script/errors/: DuplicateKey.md  InvalidValue.md  NoTransaction.md  NoValue.md  UNKNOWN_INSTRUCTION.md  UNKNOWN_KEY.md
doc/styles/: website.css
pumpkindb_client/: Cargo.toml
pumpkindb_client/src/: lib.rs  packet.rs
pumpkindb_engine/: Cargo.toml
pumpkindb_engine/src/: crates.rs  lib.rs  messaging.rs  nvmem.rs  storage.rs  timestamp.rs
pumpkindb_engine/src/script/: builtins  dispatcher.rs  env.rs  envheap.rs  macros.rs  mod.rs  mod_binaries.psc  mod_binaries.rs  mod_core.builtins  mod_core.rs  mod_hash.rs  mod_hlc.rs  mod_json.builtins  mod_json.rs  mod_msg.rs  mod_numbers.rs  mod_queue.rs  mod_stack.builtins  mod_stack.rs  mod_storage.builtins  mod_storage.rs  mod_string.rs  mod_uuid.rs  queue.rs  txn_stack.rs
pumpkindb_mio_server/: Cargo.toml
pumpkindb_mio_server/src/: connection.rs  lib.rs  server.rs
pumpkindb_server/: Cargo.toml
pumpkindb_server/src/: main.rs  server.rs
pumpkindb_term/: Cargo.toml
pumpkindb_term/src/: main.rs
pumpkinscript/: Cargo.toml
pumpkinscript/src/: binparser.rs  compose.rs  encodables.rs  lib.rs  macros.rs  packable.rs  textparser.rs
src/: crates.rs  database.rs  incrementalstamp.rs  lib.rs  logicalstamp.rs  main.rs  pubsub.rs  script.rs  server.rs  storage.rs  timestamp.rs
src/script/: basic.rs  binaries.rs  binparser.rs  builtins  compose.rs  core.rs  envheap.rs  hash.rs  json.rs  macros.rs  mod.rs  mod_atomic_id.rs  mod_binaries.rs  mod_core.rs  mod_hash.rs  mod_hlc.rs  mod_incremental_lock.rs  mod_json.rs  mod_numbers.rs  mod_stack.rs  mod_storage.rs  numbers.rs  stack.rs  storage.rs  textparser.rs  timestamp_hlc.rs
src/server/: connection.rs  mod.rs  server.rs
tests/doctests/: Cargo.toml
tests/doctests/src/: main.rs
