[package]
name = "pumpkindb"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[dependencies]
nom = "^2.1"
snowflake = "1.2.0"
lmdb-zero = { git = "https://github.com/yrashk/lmdb-zero.git", branch="drop-accessor" }
futures = "0.1.10"
tokio-core = "0.1.4"
tokio-service = "0.1.0"
tokio-proto = "0.1.0"
config = "0.3.1"
lazy_static = "0.2.2"
num-bigint = "0.1.35"
num-traits = "0.1.36"
libc = "0.2.20"

[dev-dependencies]
quickcheck = "0.4.1"
quickcheck_macros = "0.4.1"
matches = "0.1.4"
tempdir = "0.3.5"
crossbeam = "0.2.10"