[package]
name = "pumpkindb"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[dependencies]
nom = "^2.1"
snowflake = { git = "https://github.com/yrashk/snowflake.git", branch="pub-fields" }
lmdb-zero = { git = "https://github.com/yrashk/lmdb-zero.git", branch="drop-accessor" }
mio = "0.6.4"
slab = "0.3.0"
config = "0.3.1"
lazy_static = "0.2.2"
num-bigint = "0.1.35"
num-traits = "0.1.36"
libc = "0.2.20"
hybrid-clocks = "0.3.2"
byteorder = "1.0.0"
rustyline = "1.0.0"
uuid = { version = "0.4.0", features = ["v4"] }
ansi_term = "0.9.0"

[dev-dependencies]
quickcheck = "0.4.1"
quickcheck_macros = "0.4.1"
matches = "0.1.4"
tempdir = "0.3.5"
crossbeam = "0.2.10"

[features]
travis = []