[package]
name = "pumpkindb_engine"
version = "0.2.0"
description = "PumpkinDB engine"
license = "MPL-2.0"
repository = "https://github.com/PumpkinDB/PumpkinDB"
homepage = "http://pumpkindb.org"
keywords = [ "pumpkindb", "database" ]
categories = [ "database" ]

authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[dependencies]
snowflake = { version = "1.3", features = ["serde_support"] }
lmdb-zero = "0.4.0"
config = "0.3.1"
lazy_static = "0.2.2"
num-bigint = "0.1.35"
num-iter = "0.1.32"
num-traits = "0.1.36"
libc = "0.2.20"
hybrid-clocks = "0.3.3"
byteorder = "1.0.0"
uuid = { version = "0.4.0", features = ["v4", "v5"] }
glob = "0.2.11"
regex = "0.2.1"
crossbeam = "0.2.10"
tempdir = "0.3.5"
rust-crypto = "^0.2"
log = "0.3.6"
log4rs = { version = "0.6.1", features = ["toml_format"] }
serde_json = "0.9.8"
serde_cbor = "0.6.0"
num_cpus = "1.3.0"
rand = "0.3.15"
memmap = "0.5.2"

pumpkinscript = { version = "0.2", path = "../pumpkinscript" }

[dev-dependencies]
quickcheck = "0.4.1"
quickcheck_macros = "0.4.1"
matches = "0.1.4"

[features]
default = ["scoped_dictionary", "standard_mods"]

experimental = []
scoped_dictionary = []

# Modules

standard_mods = [ "mod_binaries",
                  "mod_core",
                  "mod_hash",
                  "mod_hlc",
                  "mod_json",
                  "mod_msg",
                  "mod_numbers",
                  "mod_stack",
                  "mod_queue",
                  "mod_storage",
                  "mod_string",
                  "mod_uuid"]

mod_binaries = []
mod_core = []
mod_hash = []
mod_hlc = []
mod_json = []
mod_msg = []
mod_numbers = []
mod_stack = []
mod_queue = []
mod_storage = []
mod_string = []
mod_uuid = []
