[package]
name = "pumpkindb_mio_server"
version = "0.2.0"
description = "PumpkinDB mio-based server primitives"
license = "MPL-2.0"
repository = "https://github.com/PumpkinDB/PumpkinDB"
homepage = "http://pumpkindb.org"
keywords = [ "pumpkindb", "database" ]
categories = [ "database" ]

authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[dependencies]
mio = "0.6.4"
byteorder = "1.0.0"
memmap = "0.5.2"
slab = "0.3.0"
num-bigint = "0.1.35"
num-traits = "0.1.36"
rand = "0.3.15"
log = "0.3.6"
log4rs = { version = "0.6.1", features = ["toml_format"] }
uuid = { version = "0.4", features = ["v4"] }

pumpkindb_engine = { version = "0.2", path = "../pumpkindb_engine" }
