[package]
name = "pumpkindb_server"
version = "0.2.0"
description = "PumpkinDB server"
license = "MPL-2.0"
repository = "https://github.com/PumpkinDB/PumpkinDB"
homepage = "http://pumpkindb.org"
keywords = [ "pumpkindb", "database" ]
categories = [ "database" ]

authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[[bin]]
doc = false
name = "pumpkindb"
path = "src/main.rs"

[dependencies]
clap = "2.22.1"
config = "0.3.1"
lazy_static = "0.2.2"
num_cpus = "1.3.0"
log = "0.3.6"
log4rs = { version = "0.6.1", features = ["toml_format"] }
mio = "0.6.4"

pumpkindb_engine = { version = "0.2", path = "../pumpkindb_engine" }
pumpkindb_mio_server = { version = "0.2", path = "../pumpkindb_mio_server" }
