[package]
name = "pumpkindb_term"
version = "0.2.0"
description = "PumpkinDB terminal"
license = "MPL-2.0"
repository = "https://github.com/PumpkinDB/PumpkinDB"
homepage = "http://pumpkindb.org"
keywords = [ "pumpkindb", "database" ]

authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[[bin]]
doc = false
name = "pumpkindb-term"
path = "src/main.rs"

[dependencies]
config = "0.3.1"
rustyline = "1.0.0"
ansi_term = "0.9.0"
uuid = { version = "0.4.0", features = ["v4"] }
clap = "2.22.1"

pumpkinscript = { version = "0.2", path = "../pumpkinscript" }
pumpkindb_engine = { version = "0.2", path = "../pumpkindb_engine" }
pumpkindb_client = { version = "0.2", path = "../pumpkindb_client" }
